--- a/css/style.css
+++ b/css/style.css
@@ -516,7 +516,7 @@ sub {
     position: absolute;
     z-index: 2;
     padding: 10px;
-    margin: -30px 0 0 -30px;
+    margin: -33px 0 0 -33px;
 }
 .map-point[data-id="1"] {
     left: 12.4%;
@@ -571,13 +571,13 @@ sub {
     top: 20.3%;
 }
 .map-point > svg {
-    width: 40px;
+    width: 46px;
     height: auto;
-    background: rgba(255, 255, 255, 0.6);
-    padding: 5px;
+    background: rgba(0, 0, 0, 0.5);
+    padding: 6px;
     border-radius: 50%;
     cursor: pointer;
-    box-shadow: inset 0 0 0 1px #ffffff;
+    box-shadow: inset 0 0 0 1px #1792e8;
 }
 .map-point-inner {
     position: absolute;
@@ -638,42 +638,42 @@ sub {
 .map-point-inner.bottom-left {
     top: 100%;
     left: 10px;
-    margin: -30px 0 0 0;
+    margin: -33px 0 0 0;
 }
 .map-point-inner.bottom-left:before {
     border-bottom: 6px solid #f1f2f3;
     top: -14px;
-    left: 12px;
+    left: 15px;
 }
 .map-point-inner.bottom-right {
     top: 100%;
     right: 10px;
-    margin: -30px 0 0 0;
+    margin: -33px 0 0 0;
 }
 .map-point-inner.bottom-right:before {
     border-bottom: 6px solid #f1f2f3;
     top: -14px;
-    right: 12px;
+    right: 15px;
 }
 .map-point-inner.top-left {
     bottom: 100%;
     left: 10px;
-    margin: 0 0 -30px 0;
+    margin: 0 0 -33px 0;
 }
 .map-point-inner.top-left:before {
     border-top: 6px solid #fff;
     bottom: -14px;
-    left: 12px;
+    left: 15px;
 }
 .map-point-inner.top-right {
     bottom: 100%;
     right: 10px;
-    margin: 0 0 -30px 0;
+    margin: 0 0 -33px 0;
 }
 .map-point-inner.top-right:before {
     border-top: 6px solid #fff;
     bottom: -14px;
-    right: 12px;
+    right: 15px;
 }
 .map-point:hover .map-point-inner, .map-point.tooltip-shown .map-point-inner, .map-point.tooltip-visible .map-point-inner {
     opacity: 1;
@@ -689,7 +689,7 @@ sub {
 }
 .map-point.disabled > svg {
     pointer-events: none;
-    box-shadow: inset 0 0 0 1px #dc6d6d;
+    box-shadow: inset 0 0 0 1px #820f0f;
 }
 .map-point.disabled .map-point-inner h4 {
     color: #f51e3b;
